# pptx-api

./: .gitignore  Dockerfile  README.md  fly.toml  openapi_spec.yaml  presentation.pptx  pyproject.toml  sample-v2.json  sample.json
app/: main.py
app/core/: pptx_generator.py
app/schemas/: presentation.py
app/storage/: storage.py
app/templates/: expired.html  home.html
