[project]
name = "pptx-api-node"
version = "0.1.0"
description = ""
authors = [
    {name = "Charles Goddard",email = "chargoddard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
