[project]
name = "pptx-api"
version = "0.1.0"
description = "API for generating PowerPoint presentations from JSON schema"
authors = [{ name = "Charles Goddard", email = "chargoddard@gmail.com" }]
requires-python = ">=3.10"
package-mode = false

[tool.poetry]
include = [
    { path = "app/font_files", format = [
        "sdist",
        "wheel",
    ] },
    { path = "app/static", format = [
        "sdist",
        "wheel",
    ] },

]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
pydantic = "^2.10.6"
python-pptx = { git = "https://github.com/cg123/python-pptx.git", rev = "aa444db2ab00bd1f30065c0719e8e194232b4dcf" }
uvicorn = "^0.34.0"
jinja2 = "^3.1.6"
boto3 = "^1.37.10"
requests = "^2.32.3"
pip = "^25.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
